sample/webgui/gwv6-0_svc_webgui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gwv6-0-svc-webgui
  name: gwv6-0-svc-webgui
  namespace: apic
spec:
  ports:
  - name: webgui-port
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    statefulset.kubernetes.io/pod-name: gwv6-0
  sessionAffinity: None
  type: ClusterIP
